Some UI Bug Fixed

--- a/mailer/templates/mail.html
+++ b/mailer/templates/mail.html
@@ -186,7 +186,7 @@
 
 
         <div class="alert alert-success" role="alert">
-            <p>{{ message }}</p>
+            {{ message }}
         </div>
 
     {% endfor %}
