Some Major Bugs Fixed

--- a/news/static/news/css/style.css
+++ b/news/static/news/css/style.css
@@ -29,7 +29,7 @@ section{padding: 30px 0; float: left; width: 100%}
 header{float: left; width:100%}
 .small-top{ border-bottom: 1px solid #2b2b2b;float: left; width: 100%; background: #000}
 .small-top .social-icon{float: right;}
-.small-top .social-icon a {border-left: 1px solid #2b2b2b; color: #ca1b1b; float: left; padding: 6px 13px;}
+.small-top .social-icon a {border-left: 1px solid #2b2b2b; color: #ffc107; float: left; padding: 6px 13px;}
 .small-top .social-icon a:last-child {border-right: 1px solid #2b2b2b;}
 .small-top .social-icon a:hover {color:#FD3A13; text-decoration: none;}
 .small-top .date-sec {font-size: 13px; font-weight: 600; float: left; margin-top: 4px; color: #898989}
@@ -41,7 +41,7 @@ header{float: left; width:100%}
 .top-head .admin-bar a:hover{color: #ff0000}
 .top-head .admin-bar a i{margin-right: 6px;}
 .top-head .admin-bar .ping {background: #ff0000; border: 3px solid #141517; border-radius: 50%; height: 14px; position: absolute; right: 3px;    top: 13px; width: 14px; z-index: 1;}
-.top-head .admin-bar img {float: right; height: 50px; width: 50px; margin-left: 5px;}
+.top-head .admin-bar img {float: right; height: 50px; width: 50px; margin-left: 100px; margin-top: 7px;}
 .top-nav{background: #fff; padding: 0; border-bottom: 1px solid #dbdbdb}
 .top-nav .nav-link {padding-bottom: 0.7rem; padding-top: 0.7rem;}
 .top-nav .navbar-nav .nav-item + .nav-item{margin-left:0}
