Minor Bug Fixed & Module Updated

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -44,13 +44,13 @@
         <div class="inputBx">
           <input type="text" name="username" required="required">
           <span>Login</span>
-          <img src="https://www.flaticon.com/svg/static/icons/svg/709/709699.svg" alt="user">
+          <img src="{% static 'images/user.png' %}" alt="user">
         </div>
         <div class="inputBx password">
           <input id="password-input" type="password" name="password" required="required">
           <span>Password</span>
           <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
-          <img src="https://www.flaticon.com/svg/static/icons/svg/1828/1828471.svg" alt="lock">
+          <img src="{% static 'images/padlock.png' %}" alt="lock">
         </div>
         <label class="remember"><input type="checkbox">
           Remember</label>
