--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -34,14 +34,14 @@
 {#          <input type="text" required="required">#}
             {{ form.username }}
           <span>User Name</span>
-          <img src="https://www.flaticon.com/svg/static/icons/svg/709/709699.svg" alt="user">
+          <img src="{% static 'images/user.png' %}" alt="user">
         </div>
 
           <div class="inputBx">
 {#          <input type="email" required="required">#}
               {{ form.email }}
 {#          <span>Email</span>#}
-          <img src="https://www.flaticon.com/svg/static/icons/svg/709/709699.svg" alt="email">
+          <img src="{% static 'images/email.png' %}" alt="email">
         </div>
 
         <div class="inputBx password">
@@ -49,7 +49,7 @@
             {{ form.password1 }}
           <span>Password</span>
           <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
-          <img src="https://www.flaticon.com/svg/static/icons/svg/1828/1828471.svg" alt="lock">
+          <img src="{% static 'images/padlock.png' %}" alt="lock">
         </div>
 
            <div class="inputBx password">
@@ -57,7 +57,7 @@
                {{ form.password2 }}
           <span>Password</span>
           <a href="#" class="password-control" onclick="return show_hide_password(this);"></a>
-          <img src="https://www.flaticon.com/svg/static/icons/svg/1828/1828471.svg" alt="lock">
+          <img src="{% static 'images/padlock.png' %}" alt="lock">
         </div>
 
 
